# collidervm_toy

./: .all-contributorsrc  .gitignore  Cargo.toml  README.md
.github/workflows/: demo.yml
scripts/demo/: README.md  bitcoin-init.sh  docker-compose.yml  run_full_demo.sh  setup_initial_state.sh
src/: core.rs  lib.rs  main.rs  musig2.rs  output.rs  simulation.rs  transactions.rs  utils.rs
